k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-api-service
  namespace: iris-api
  labels:
    app: iris-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: iris-api
